--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
             <h6>online</h6>
             <h1>HIGH QUALITY</h1>
             <H1>COURSES</H1>
-            <h5>Every day brings with it a fresh set of 
-            <br>learning possibilities.</h5>
+            <h3>Every day brings with it a fresh set of 
+            <br>learning possibilities.</h3>
 
             <div>
                 <button class="quote" type="button">Get Quote Now</button>
@@ -47,7 +47,7 @@
     </div>
 
     <div>
-        <div class="sec2-text">
+        <div class="text">
             <h6>Practice Advice</h6>
             <h2>Our Popular Courses</h2>
             <h5>Problems trying to resolve the conflict between 
@@ -58,7 +58,7 @@
     <div class="cards-sec">
         <div class="cards">
             <img src="desktop.svg">
-            <h3>Training Courses</h3>
+            <h5>Training Courses</h5>
             <p class="red-line">________</p>
             <p>The gradual 
             <br>accumulation of 
@@ -66,7 +66,7 @@
         </div>
         <div class="cards">
             <img src="img2.svg">
-            <h3>Training Courses</h3>
+            <h5>Training Courses</h5>
             <p class="red-line">________</p>
             <p>The gradual 
             <br>accumulation of 
@@ -74,7 +74,7 @@
         </div>
         <div class="cards">
             <img src="img3.svg">
-            <h3>Training Courses</h3>
+            <h5>Training Courses</h5>
             <p class="red-line">________</p>
             <p>The gradual 
             <br>information about 
@@ -82,7 +82,7 @@
         </div>
         <div class="cards">
             <img src="img4.svg">
-          <h3>Expert Instruction</h3>
+          <h5>Expert Instruction</h5>
           <p class="red-line">________</p>
           <p>The gradual 
           <br>accumulation of 
@@ -126,7 +126,7 @@
 
 
     <div>
-        <div class="sec4-text">
+        <div class="text">
             <h6>Courses</h6>
             <h2>Most Popular Courses</h2>
             <h5>Problems trying to resolve the conflict between 
@@ -137,55 +137,230 @@
     <div class="sec4-cards">
         <div class="cards4">
             <img src="arrow.png">
-            <h3>Training Courses</h3>
-            <h3>Video in Live Action</h3>
+            <h3 class="green">Training Courses <img src="4.9.png"></h3>
+            <h3 class="bold">Video in Live Action</h3>
             <p>We focus on ergonomics 
             <br>and meeting you....</p>
             <div class="dld">
                 <img src="download.png">
                 <p>15 Sales</p>
             </div>
-            <p>$16.48 <span class="orange">$6.48</span></p>
+            <p class="price">$16.48 <span class="orange">$6.48</span></p>
             <button class="learn-btn" type="button">Learn More ></button>
         </div>
         <div class="cards4">
             <img src="inline.png">
-            <h3>Training Courses</h3>
-            <h3>Most Popular Courses</h3>
+            <h3 class="green">Training Courses <img src="4.9.png"></h3>
+            <h3 class="bold">Most Popular Courses</h3>
             <p>We focus on ergonomics 
             <br>and meeting you....</p>
             <div class="dld">
                 <img src="download.png">
                 <p>15 Sales</p>
             </div>
-            <p>$16.48 <span class="orange">$6.48</span></p>
+            <p class="price">$16.48 <span class="orange">$6.48</span></p>
             <button class="learn-btn" type="button">Learn More ></button>
         </div>
         <div class="cards4">
             <img src="yellow.png">
-            <h3>2,769 online courses</h3>
-            <h3>Our Experts Teacher</h3>
+            <h3 class="green">2,769 online courses <img src="4.9.png"></h3>
+            <h3 class="bold">Our Experts Teacher</h3>
             <p>We focus on ergonomics 
             <br>and meeting you....</p>
             <div class="dld">
                 <img src="download.png">
                 <p>15 Sales</p>
             </div>
-            <p>$16.48 <span class="orange">$6.48</span></p>
+            <p class="price">$16.48 <span class="orange">$6.48</span></p>
             <button class="learn-btn" type="button">Learn More ></button>
         </div>
         <div class="cards4">
             <img src="colours.png">
-            <h3>Training Courses</h3>
-            <h3>Every Client Matters</h3>
+            <h3 class="green">Training Courses <img src="4.9.png"></h3>
+            <h3 class="bold">Every Client Matters</h3>
             <p>We focus on ergonomics 
             <br>and meeting you....</p>
             <div class="dld">
                 <img src="download.png">
                 <p>15 Sales</p>
             </div>
-            <p>$16.48 <span class="orange">$6.48</span></p>
+            <p class="price">$16.48 <span class="orange">$6.48</span></p>
             <button class="learn-btn" type="button">Learn More > </button>
         </div>
+    </div>
+
+
+        <div>
+            <div class="text">
+                <h6>Practice Advice</h6>
+                <h2>Our Experts Teacher</h2>
+                <h5>Problems trying to resolve the conflict between 
+                <br>the two major realms of Classical physics: Newtonian mechanics</h5>
+            </div>
+
+
+        <div class="cards5">
+            <div class="card-5">
+                <img src="heart.png">
+                <h3>FREE</h3>
+                <P style="font-weight: 600;" class="paragraph">Organize across all 
+                <br>apps by hand</P>
+                <h1>19$</h1>
+                <h6>Per Month</h6>
+                <p class="paragraph">Slate helps you see how many
+                <br>more days you need...</p>
+                <button type="button">Try for free</button>
+                <div class="tick">
+                <p><img src="tick.png">&ensp;Unlimited product updates</p>
+                <p><img src="tick.png">&ensp;Unlimited product updates</p>
+                <p><img src="tick.png">&ensp;Unlimited product updates</p>
+                <p><img src="whitetick.png">&ensp;1GB Cloud Storage</p>
+                <p><img src="whitetick.png">&ensp;Email and Community
+                <br>&emsp;&emsp;&nbsp;Support</p>
+                </div>
+            </div>
+            <div class="card-5">
+                <img src="heart.png">
+                <h3>FREE</h3>
+                <P style="font-weight: 600;" class="paragraph">Organize across all 
+                <br>apps by hand</P>
+                <h1>19$</h1>
+                <h6>Per Month</h6>
+                <p class="paragraph">Slate helps you see how many
+                <br>more days you need...</p>
+                <button type="button">Try for free</button>
+                <div class="tick">
+                <p><img src="tick.png">&ensp;Unlimited product updates</p>
+                <p><img src="tick.png">&ensp;Unlimited product updates</p>
+                <p><img src="tick.png">&ensp;Unlimited product updates</p>
+                <p><img src="whitetick.png">&ensp;1GB Cloud Storage</p>
+                <p><img src="whitetick.png">&ensp;Email and Community
+                <br>&emsp;&emsp;&nbsp;Support</p>
+                </div>
+            </div>
+            <div class="card-5">
+                <img src="heart.png">
+                <h3>FREE</h3>
+                <P style="font-weight: 600;" class="paragraph">Organize across all 
+                <br>apps by hand</P>
+                <h1>19$</h1>
+                <h6>Per Month</h6>
+                <p class="paragraph">Slate helps you see how many
+                <br>more days you need...</p>
+                <button type="button">Try for free</button>
+                <div class="tick">
+                <p><img src="tick.png">&ensp;Unlimited product updates</p>
+                <p><img src="tick.png">&ensp;Unlimited product updates</p>
+                <p><img src="tick.png">&ensp;Unlimited product updates</p>
+                <p><img src="whitetick.png">&ensp;1GB Cloud Storage</p>
+                <p><img src="whitetick.png">&ensp;Email and Community
+                <br>&emsp;&emsp;&nbsp;Support</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+        <div>
+            <div class="text">
+                <h6>Testimonials</h6>
+                <h2>Video in Live Action</h2>
+                <h5>Problems trying to resolve the conflict between 
+                <br>the two major realms of Classical physics: Newtonian mechanics</h5>
+            </div>
+        </div>
+
+
+        <div class="comments">
+            <div>
+                <img class="woman" src="woman.png">
+                <p>Slate helps you see how many more days 
+                <br>you need to work to reach your financial 
+                <br>goal for the month and year.</p>
+                <img class="stars" src="stars.png">
+                <h5>Regina Miles</h5>
+                <h6>Designer</h6>
+            </div>
+            <div>
+                <img class="man" src="man.png">
+                <p>Slate helps you see how many more days 
+                <br>you need to work to reach your financial 
+                <br>goal for the month and year.</p>
+                <img class="stars" src="stars.png">
+                <h5>Regina Miles</h5>
+                <h6>Designer</h6>
+            </div>
+        </div>
+
+
+
+        <div class="sec-last">
+            <h6>Newsletter</h6>
+            <h2>Our Experts Teacher</h2>
+            <h5>Problems trying to resolve the conflict between 
+            <br>the two major realms of Classical physics: Newtonian mechanics</h5>
+
+            <div class="seclast-btn">
+                <input type="email" placeholder="Your Email"><span class="sub">Subscribe</span>
+            </div>
+        </div>
+
+
+    <div class="last">
+        <div>
+            <h5>Company Info</h5>
+            <ul>
+                <li>About Us</li>
+                <li>Carrier</li>
+                <li>We are hiring</li>
+                <li>Blog</li>
+            </ul>
+        </div>
+        <div>
+            <h5>Legal</h5>
+            <ul>
+                <li>About Us</li>
+                <li>Carrier</li>
+                <li>We are hiring</li>
+                <li>Blog</li>
+            </ul>
+        </div>
+        <div>
+            <h5>Features</h5>
+            <ul>
+                <li>Business Marketing</li>
+                <li>User Analytic</li>
+                <li>Live Chat</li>
+                <li>Unlimited Support</li>
+            </ul>
+        </div>
+        <div>
+            <h5>Resources</h5>
+            <ul>
+                <li>IOS & Android</li>
+                <li>Watch a Demo</li>
+                <li>Customers</li>
+                <li>API</li>
+            </ul>
+        </div>
+        <div>
+            <h5>Get In Touch</h5>
+            <ul class="information">
+                <li> <img src="phone.png">(480) 555-0103</li>
+                <li> <img src="location.png">4517 Washington Ave. Manchester, 
+                <br>&emsp;&emsp;&emsp;Kentucky 39495</li>
+                <li> <img src="email.png">debra.holt@example.com</li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="footer">
+        <p>Made With Love By Figmaland All Right Reserved!</p>
+        <div class="social-images">
+        <img src="facebook.png">
+        <img src="instagram.png">
+        <img src="twitter.png">
+        </div>
+    </div>
 </body>
 </html>
